--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 
                 <div class="prices">$149.99 <span>$169.99</span></div>
 
-                <button class="button">
+                <button
+                    class="button"
+                    type="submit"
+                    onclick="alert('Thanks for submitting!')"
+                >
                     <img
                         class="button-icon"
                         src="./images/icon-cart.svg"
